tests/NormalTests/paczka1/small_fuzzy/27606221.err
Error in line 4: XYxE5G S425 52,1
Error in line 8: S425 S936 73,90
Error in line 6: S425 S936 24,4
Error in line 10: maeAlgf S936 47,9
